<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:maxWidth="488dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_query_hint"
        android:imeOptions="actionSearch"
        android:inputType="text" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_search_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/search_results_description"
        android:layout_weight="1" />

</LinearLayout>
