<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/quizGameFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Exit -->
    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:contentDescription="@string/exit_quiz"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <!-- Содержимое -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_question"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_play_preview"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/play_btn"
            android:src="@android:drawable/ic_media_play" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_answers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_skip_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:enabled="false"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

