<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_playlist_placeholder"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPlayAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_btn"/>

        <Button
            android:id="@+id/btnQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_quiz"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAddTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_track"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracksInPlaylist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"/>
</LinearLayout>
